--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DEEPSEEK_API_KEY=sk-e202d7c1b85d4ec8890d6ecddb3810f7
+DEEPSEEK_API_KEY= 
 DEEPSEEK_API_URL=https://api.deepseek.com/chat/completions
